feat: add Groq API support for free translation
- Add Groq configuration to .env.example with llama-3.3-70b-versatile
- Refactor step030_translation.py to support Groq via GROQ_API_KEY
- Add get_openai_client() helper for unified API handling
- Add test_groq.py script to verify API key and test translation

Groq provides 20 RPM and 14400 requests/day free tier.
Recommended model: llama-3.3-70b-versatile (decommissioned llama-3.1-70b)

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,13 @@
+# OpenAI / Groq / 其他兼容 API
+# 使用 Groq 时：OPENAI_API_BASE=https://api.groq.com/openai/v1
 OPENAI_API_KEY = 'sk-xxx'
 OPENAI_API_BASE =
 MODEL_NAME = 'gpt-3.5-turbo'
+
+# Groq API (免费额度：20 RPM, 14400 请求/天)
+# 如果使用 Groq，取消下面的注释并填写你的 key
+# GROQ_API_KEY = 'gsk_xxx'
+# GROQ_MODEL = 'llama-3.3-70b-versatile'
 
 HF_TOKEN = 'hf_xxx'
 
