feat: 添加模型管理工具和优化配置，增强视频下载和TTS功能

--- a/.gitignore
+++ b/.gitignore
@@ -168,3 +168,21 @@ download_list.txt
 get_upload_link.txt
 launch.json
 remove_mp4.py
+
+# Cookie files (sensitive)
+cookies.txt
+yooutubecook.txt
+bilibili_cookies.txt
+*.cookies
+
+# System files
+.sisyphus/
+nul
+
+# Runtime files
+run_with_deno.bat
+
+# Tools and scripts cache
+tools/__pycache__/
+scripts/__pycache__/
+docs/__pycache__/
