docs: 在 .env.example 中添加代理配置示例
- 添加 HTTP_PROXY 和 HTTPS_PROXY 配置示例（用于访问 YouTube）
- 添加 NO_PROXY 配置示例（用于绕过代理访问 Bilibili）
- 添加中文注释说明各配置的用途

--- a/.env.example
+++ b/.env.example
@@ -17,4 +17,16 @@ BYTEDANCE_ACCESS_TOKEN =
 
 # 如果在从 huggingface 下载模型时报错，uncomment 下面的代码
 # HF_ENDPOINT = 'https://hf-mirror.com'
-BILI_BASE64 =
+
+# Bilibili 上传凭据
+BILI_SESSDATA =
+BILI_BILI_JCT =
+
+# 代理设置（用于访问 YouTube）
+# 如果你需要代理才能访问 YouTube，请取消下面的注释并修改为你的代理地址
+# HTTP_PROXY=http://127.0.0.1:10808
+# HTTPS_PROXY=http://127.0.0.1:10808
+
+# 绕过代理的域名（用于解决 Bilibili 上传问题）
+# 如果你配置了代理但 Bilibili 上传失败，请取消下面的注释
+# NO_PROXY=api.bilibili.com,member.bilibili.com
