feat: 添加视频编码优化（NVENC + CRF）
- 自动检测 NVIDIA GPU 并使用 NVENC 硬件编码（速度提升 5-10 倍）
- 支持 libx264 软件编码，提供 high/medium/low 三种质量预设
- 使用 CRF 模式替代固定码率，相同质量下文件更小
- 添加 VIDEO_ENCODER 和 VIDEO_QUALITY 环境变量配置
- 编码失败时自动回退到软件编码
- 优化 ffmpeg 命令参数，添加进度显示和错误处理

配置方法：
- VIDEO_ENCODER=auto/nvenc/x264
- VIDEO_QUALITY=high/medium/low

--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,22 @@ BILI_BILI_JCT =
 # 绕过代理的域名（用于解决 Bilibili 上传问题）
 # 如果你配置了代理但 Bilibili 上传失败，请取消下面的注释
 # NO_PROXY=api.bilibili.com,member.bilibili.com
+
+# ========== 视频合成配置 ==========
+
+# 视频编码器选择：
+# - auto: 自动检测（优先使用 NVENC 硬件编码，需要 NVIDIA GPU）
+# - nvenc: 强制使用 NVIDIA NVENC 硬件编码
+# - x264: 使用 libx264 软件编码
+VIDEO_ENCODER=auto
+
+# 视频质量设置（仅当使用 x264 时生效）：
+# - high: 高质量（CRF 18，慢速预设，文件较大）
+# - medium: 中等质量（CRF 21，中等预设，平衡）
+# - low: 低质量（CRF 25，快速预设，文件较小）
+VIDEO_QUALITY=high
+
+# 说明：
+# 1. 如果你有 NVIDIA GPU，推荐使用 auto 或 nvenc，编码速度快 5-10 倍
+# 2. 如果追求最佳画质且不在乎时间，使用 x264 + high
+# 3. 如果存储空间有限，使用 low 质量
