feat: 添加术语一致性检查功能
- 新增 terminology.py 模块，包含 200+ 个 AI/科技领域专业术语
- 默认术语词典覆盖 Machine Learning、Deep Learning、NLP、Computer Vision 等领域
- 支持自定义术语词典（JSON 格式）
- 在翻译流程中集成术语替换，确保专业术语翻译一致性
- 术语按长度降序匹配，避免部分匹配问题
- 支持从项目 config/terminology.json 加载自定义术语
- 添加术语提取功能，帮助发现新的专业术语

使用方法：
- 系统自动加载默认术语词典
- 创建 config/terminology.json 添加自定义术语
- 或使用 TERMINOLOGY_FILE 环境变量指定自定义词典路径

示例术语：
- Transformer -> Transformer（保持英文）
- Machine Learning -> 机器学习
- Neural Network -> 神经网络
- API/GPU/CPU -> 保持原文

--- a/.env.example
+++ b/.env.example
@@ -49,3 +49,10 @@ VIDEO_QUALITY=high
 # 1. 如果你有 NVIDIA GPU，推荐使用 auto 或 nvenc，编码速度快 5-10 倍
 # 2. 如果追求最佳画质且不在乎时间，使用 x264 + high
 # 3. 如果存储空间有限，使用 low 质量
+
+# ========== 术语一致性配置 ==========
+
+# 自定义术语词典文件路径（可选）
+# 创建一个 JSON 文件，格式：{"English Term": "中文翻译", ...}
+# 例如：{"Transformer": "Transformer", "Machine Learning": "机器学习"}
+# TERMINOLOGY_FILE=./config/terminology.json
