--- a/.env.example
+++ b/.env.example
@@ -50,6 +50,15 @@ VIDEO_QUALITY=high
 # 2. 如果追求最佳画质且不在乎时间，使用 x264 + high
 # 3. 如果存储空间有限，使用 low 质量
 
+# ========== FFmpeg 路径配置 ==========
+
+# FFmpeg 可执行文件路径（可选）
+# 如果 ffmpeg 已添加到系统 PATH，此项可不配置
+# 如果 ffmpeg 在特定位置，请指定完整路径
+# 示例（Windows）: FFMPEG_PATH=D:\ffmpeg\bin\ffmpeg.exe
+# 示例（Linux/Mac）: FFMPEG_PATH=/usr/local/bin/ffmpeg
+# FFMPEG_PATH=
+
 # ========== 术语一致性配置 ==========
 
 # 自定义术语词典文件路径（可选）
