--- a/.gitignore
+++ b/.gitignore
@@ -62,7 +62,7 @@ db.sqlite3
 db.sqlite3-journal
 
 # Flask stuff:
-instance/
+*.log
 .webassets-cache
 
 # Scrapy stuff:
@@ -186,3 +186,9 @@ run_with_deno.bat
 tools/__pycache__/
 scripts/__pycache__/
 docs/__pycache__/
+
+# Node
+node_modules/
+
+# Agent
+.agent/
